<resources>
    <string name="app_name">CoatCode</string>
    <string name="title_activity_feed">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_post">Post</string>
    <string name="title_setting">Setting</string>
    <string name="notifications">알람</string>
    <string name="post">게시물</string>
    <string name="shop">상품</string>
    <string name="home">홈</string>
    <string name="profile">프로필</string>
    <string name="setting">설정</string>
    <string name="none">none</string>
    <string name="add">게시물</string>
    <string name="posting">게시글 작성</string>
    <string name="todo">TODO</string>
    <string name="postActionBarTitle">상품정보 입력</string>
    <string name="postInfo">게시글 작성</string>
    <string name="postHint">게시물 제목</string>
    <string name="postContent">게시글 내용</string>
    <string name="postHashHint">#해시태그</string>
    <string name="Upload">업로드</string>
    <string name="Image">이미지</string>
    <string name="coatcode">coatcode</string>
    <string name="socialLogin">소셜 로그인</string>
    <string name="emailLogin">이메일 로그인</string>
    <string name="emailSignUp">이메일 회원가입</string>
    <string name="backgroundimage">backGroundImage</string>
    <string name="search">Search</string>
    <string name="hot">인기</string>
    <string name="all">전체</string>
    <string name="follow">팔로우</string>
    <string name="Hot">인기</string>
    <string name="designer_kang">Designer_Kang</string>
    <string name="_1_day_ago">1 day ago</string>
    <string name="feedimage">FeedImage</string>
    <string name="this_design_good">This Design Good</string>
    <string name="_1_3k">1.3k</string>
    <string name="Hello">hello</string>
    <string name="showimagedetail">showImageDetail</string>
    <string name="contentSample">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry\'s com.</string>
    <string name="tagSample">#Female #Design #Good #Kang #Female #Design</string>
    <string name="shareButtonImage">shareButton</string>
    <string name="_10_likes">10 Likes</string>
    <string name="_34_view">34 view</string>
    <string name="_13_comments">13 Comments</string>
    <string name="commentTime">댓글시간</string>
    <string name="content">댓글내용</string>
    <string name="commentInput">댓글을 입력해주세요...</string>
    <string name="other">other</string>
    <string name="user_profile_name">족발먹고싶다</string>
    <string name="user_profile_detail">30년 경력의 장충동 왕족발</string>
    <string name="Followers">팔로워 :</string>
    <string name="FollowersCount">0.2k</string>
    <string name="Following">팔로잉 :</string>
    <string name="FollowingCount">0.5k</string>
</resources>