<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/edit"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/bag"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/plus"
        android:title="@string/add"
        />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/good"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings"
        android:title="@string/setting" />

</menu>