<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.junhyuk.daedo.main.bottomItem.home.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_feedDetailFragment"
            app:destination="@id/feedDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.junhyuk.daedo.main.bottomItem.shop.ShopFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <activity
        android:id="@+id/navigation_post"
        android:name="com.junhyuk.daedo.main.bottomItem.post.activity.PostActivity"
        android:label="@string/title_post"
        tools:layout="@layout/activity_post"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.junhyuk.daedo.main.bottomItem.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.junhyuk.daedo.main.bottomItem.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/setting_fragment"
        />
    <fragment
        android:id="@+id/feedDetailFragment"
        android:name="com.junhyuk.daedo.main.bottomItem.home.fragment.FeedDetailFragment"
        android:label="FeedDetailFragment" >
        <action
            android:id="@+id/action_feedDetailFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>