<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.Intro">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/intro_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/backgroundimage" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74.3dp"
        android:layout_marginBottom="159.3dp"
        android:fontFamily="@font/title_font"
        android:text="@string/coatcode"
        android:textColor="#ffffff"
        android:textSize="58sp"
        android:shadowColor="#19222222"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/social_login_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/login_button"
            android:text="@string/socialLogin"
            android:textColor="#fcfcfc" />

        <Button
            android:id="@+id/email_login_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/login_button"
            android:text="@string/emailLogin"
            android:textColor="#fcfcfc" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:text="@string/emailSignUp"
            android:textColor="#fcfcfc" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
