<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PostBackground"
    tools:context=".main.bottomItem.post.fragment.PostFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/xButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_x_button" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/postInfo"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/linearLayout2"
        android:layout_width="330dp"
        android:layout_height="132dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/Image"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/addImageButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="33dp"
            app:cardBackgroundColor="@color/cardviewStroke"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/cardview_background"
                android:scaleType="centerInside"
                android:src="@drawable/add"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="186dp"
            android:layout_height="84dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="33dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:overScrollMode="never"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="330dp"
        android:layout_height="350dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.050000012">

        <EditText
            android:id="@+id/postTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:ems="12"
            android:hint="@string/postHint"
            android:inputType="text"
            android:textSize="20sp" />

        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="52dp"
            android:background="@color/gray_btn_bg_color" />

        <EditText
            android:id="@+id/postContent"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="66dp"
            android:background="@android:color/transparent"
            android:ems="12"
            android:gravity="top"
            android:hint="@string/postContent"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <View
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:layout_marginTop="309dp"
            android:background="@color/gray_btn_bg_color" />

        <EditText
            android:id="@+id/inputHashtag"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="317dp"
            android:background="@android:color/transparent"
            android:ems="12"
            android:hint="@string/postHashHint"
            android:inputType="text"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/editHashtag"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_x_button"
            android:scaleType="centerInside"
            android:layout_marginTop="317dp"
            android:layout_marginStart="300dp"
            android:visibility="invisible"
            android:background="@android:color/transparent"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/upload_button_background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Upload"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>